tests/files/parser_tests/should_fail/050.cmdr
//Should not parse while loop
while (true) {